--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -3,6 +3,18 @@
     <head th:fragment="header">
         <title th:text="${title}">Getting Started: Serving Web Content</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+        <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css"
+              th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}"
+              rel="stylesheet" media="screen" />
+
+        <link href="http://cdn.jsdelivr.net/webjars/font-awesome/4.7.0/font-awesome.min.css"
+              th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}"
+              rel="stylesheet" />
+
+        <script src="http://cdn.jsdelivr.net/webjars/jquery/3.2.1/jquery.min.js"
+                th:src="@{/webjars/jquery/3.2.1/jquery.min.js}"></script>
+
     </head>
 
     <body>
