--- a/src/main/resources/templates/todo/tasks.html
+++ b/src/main/resources/templates/todo/tasks.html
@@ -29,6 +29,20 @@
                 </tbody>
             </table>
 
+            <form method="post" action="/todo/tasks" class="form-inline">
+                <div class="form-group">
+                    <label for="name" th:text="#{tasks.name}">Name</label>
+                    <input type="text" name="name" id="name" class="form-control"/>
+                </div>
+
+                <div class="form-group">
+                    <label for="description" th:text="#{tasks.description}">Description</label>
+                    <input type="text" name="description" id="description" class="form-control"/>
+                </div>
+
+                <button type="submit" class="btn btn-primary"><i class="fa fa-plus"></i></button>
+            </form>
+
             <div th:replace="base :: footer"></div>
         </div>
     </body>
